added css and updated index.html

--- a/Django/New assignments/time_display_assignment2/apps/time_display/templates/time_display/index.html
+++ b/Django/New assignments/time_display_assignment2/apps/time_display/templates/time_display/index.html
@@ -3,10 +3,15 @@
 <head>
 	<title>Time Display</title>
 	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'timedisplay/css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'time_display/css/style1.css' %}">
 </head>
 <body>
 	<h3>The current time and date: </h3>
-	<h1>{{ time }}</h1>
+	<h1 class='time'>{{ time }}</h1>
+	<form class="btn" action="index.html" method="post">
+		{% csrf_token%}
+
+
+	</form>
 </body>
 </html>
