added time display and GIT ready to go folder

--- a/Django/New assignments/time_display_assignment2/apps/time_display/static/time_display/css/style1.css
+++ b/Django/New assignments/time_display_assignment2/apps/time_display/static/time_display/css/style1.css
@@ -3,9 +3,12 @@
   padding: 0px;
   font-family: sans-serif;
 }
-time {
-  color: red;
+h3 {
+  color: blue;
   background-color: aqua;
+}
+#time {
+  background: blue;
 
 
 }
