--- a/Django/New assignments/time_display_assignment2/apps/time_display/templates/time_display/index.html
+++ b/Django/New assignments/time_display_assignment2/apps/time_display/templates/time_display/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="{% static 'time_display/css/style1.css' %}">
 </head>
 <body>
+	<!-- <img src="http://2.bp.blogspot.com/-p-lcS7ISEs4/UlV_2VABmzI/AAAAAAAAZBs/2ekktLADM1M/s1600/Icy+Mountains+Wallpapers+%25281%2529.jpg" alt=""> -->
 	<h3>The current time and date: </h3>
 	<h1 class='time'>{{ time }}</h1>
 	<form class="btn" action="index.html" method="post">
@@ -13,7 +14,6 @@
 		<input type="text" name="User Name" value="User Name">
 		<input type="Password" name="Password" value="Password">
 
-
-	</form>
+	</form id='bob'>
 </body>
 </html>
