updated Django files

--- a/Django/New assignments/time_display_assignment2/apps/time_display/static/time_display/css/style1.css
+++ b/Django/New assignments/time_display_assignment2/apps/time_display/static/time_display/css/style1.css
@@ -7,9 +7,13 @@
 h3 {
   color: blue;
   background-color: aqua;
+  text-align: center;
+  margin: auto;
 }
 .time {
   background: blue;
+  text-align: center;
+  display: block;
 
 
 }
