--- a/Django/New assignments/time_display_assignment2/apps/time_display/templates/time_display/index.html
+++ b/Django/New assignments/time_display_assignment2/apps/time_display/templates/time_display/index.html
@@ -13,6 +13,7 @@
 		{% csrf_token %}
 		<input type="text" name="User Name" value="User Name">
 		<input type="Password" name="Password" value="Password">
+		<input type="submit" name="Login" value="Login">
 
 	</form id='bob'>
 </body>
